added support to approve, reject, cancel loans
