# backend/Modules/Loan/Server.Loan.EndPoints/Loan/UpdateLoanStatus/UpdateLoanStatuResponse.cs
@@ -1,0 +1,4 @@
+﻿namespace Server.Loan.EndPoints.Loan.UpdateLoanStatus
+{
+    internal record UpdateLoanStatuResponse(string LoanId);
+}
